--- a/demo-react-slider/src/components/Slider/Slider.css
+++ b/demo-react-slider/src/components/Slider/Slider.css
@@ -3,17 +3,43 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    background-color: #48464b;
+    padding: 10px 0;
 }
 
 .slider__tab {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.slider__tab-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
     width: 100%;
-    padding: 0 20px;
 }
 
-.slider .slider__card:not(:last-child) {
-    align-self: center;
+.slider .slider__card {
+    padding: 15px;
+    height: 100%;
+}
+
+.slider .slider__card-title {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.slider .slider__card-action {
+    margin-top: 10px;
+}
+
+.slider .slider__card-img img {
+    width: 100%;
+    height: 20%;
 }
