--- a/demo-react-slider/src/components/Slider/Slider.css
+++ b/demo-react-slider/src/components/Slider/Slider.css
@@ -5,7 +5,8 @@
     flex-direction: column;
     width: 100%;
     background-color: #48464b;
-    padding: 10px 0;
+    padding: 20px 0;
+    height: 100%;
 }
 
 .slider__tab {
@@ -21,25 +22,44 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
     width: 100%;
+    padding: 30px;
 }
 
 .slider .slider__card {
-    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
 .slider .slider__card-title {
+    margin-top: 20px;
     margin-bottom: 10px;
     font-weight: bold;
+    padding: 0 30px;
+}
+
+.slider .slider__card-content {
+    padding: 0 30px;
+    height: 100%;
 }
 
 .slider .slider__card-action {
-    margin-top: 10px;
+    margin: 15px 0;
+    padding: 0 30px;
+}
+
+.slider .slider__card-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .slider .slider__card-img img {
     width: 100%;
-    height: 20%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
