--- a/demo-react-slider/src/components/Container/Container.css
+++ b/demo-react-slider/src/components/Container/Container.css
@@ -11,6 +11,6 @@
 
 .container .container__header {
     margin-bottom: 10px;
-    font-size: 24px;
+    font-size: 2.5rem;
     font-weight: 600;
 }
