--- a/demo-react-slider/src/components/Slider/Slider.css
+++ b/demo-react-slider/src/components/Slider/Slider.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    background-color: #48464b;
+    background-color: #2F2A32;
     padding: 20px 0;
     height: 100%;
 }
@@ -62,4 +62,10 @@
     height: 100%;
     border-radius: 10px;
     object-fit: cover;
+}
+
+.slider .slider__tab-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
