add slider setActiveCardSlider functionality

--- a/demo-react-slider/src/components/Button/Button.css
+++ b/demo-react-slider/src/components/Button/Button.css
@@ -7,7 +7,7 @@
     color: #222;
     cursor: pointer;
     font-weight: bold;
-    transition: background .3s ease-in-out;
+    transition: all .1s ease-in;
     position: relative;
 }
 
