--- a/demo-react-slider/src/components/Slider/Slider.css
+++ b/demo-react-slider/src/components/Slider/Slider.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    transition: all .3s ease-in-out;
 }
 
 .slider .slider__card-title {
@@ -37,6 +38,7 @@
     margin-bottom: 10px;
     font-weight: bold;
     padding: 0 30px;
+    transition: all .1s ease-in-out;
 }
 
 .slider .slider__card-content {
