--- a/demo-react-slider/src/components/Slider/Slider.css
+++ b/demo-react-slider/src/components/Slider/Slider.css
@@ -9,28 +9,32 @@
     height: 100%;
 }
 
-.slider__tab {
+.slider .slider__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
+    height: 70%;
 }
 
-.slider__tab-content {
+.slider__wrapper-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 30px;
+    height: 100%;
 }
 
 .slider .slider__card {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    transition: all .3s ease-in-out;
+    max-height: 500px;
+    transition: all .2s ease-in-out;
+    overflow: hidden;
+    background-color: #26232B;
 }
 
 .slider .slider__card-title {
@@ -38,7 +42,6 @@
     margin-bottom: 10px;
     font-weight: bold;
     padding: 0 30px;
-    transition: all .1s ease-in-out;
 }
 
 .slider .slider__card-content {
@@ -62,9 +65,10 @@
     height: 100%;
     border-radius: 10px;
     object-fit: cover;
+    transition: height .1s ease-in;
 }
 
-.slider .slider__tab-footer {
+.slider .slider__wrapper-footer {
     display: flex;
     justify-content: center;
     align-items: center;
