--- a/demo-react-slider/src/App.css
+++ b/demo-react-slider/src/App.css
@@ -11,3 +11,23 @@
   width: 1720px;
   margin:  0 auto;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #25222A;
+  color: #fff;
+  padding: 20px;
+  height: 90%;
+}
+
+.container .container__header {
+  margin-bottom: 10px;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.container .container__body {
+  height: 100%;
+}
